# Didenko-TKI-241

App/: main.cpp
Didenko-TKI-241/App/: main.cpp
Didenko-TKI-241/Lib/: ConstantGenerate.cpp  Exercise.cpp  Exercise.h  Generator.h  IStreamGenerate.h  InputHandler.cpp  InputHandler.h  Matrix.h  RandomGenerate.cpp  RandomGenerate.h  Task_1.cpp  Task_2.cpp  Task_2.h
Didenko-TKI-241/Tests/: tests.cpp  tests.h
Lib/: ConstantGenerate.h  Exercise.cpp  Exercise.h  Generator.h  IStreamGenerate.cpp  Matrix.cpp  Matrix.h  Task_1.cpp  Task_1.h  Task_2.cpp  Task_2.h  Task_3.cpp  Task_3.h
Tests/: tests.cpp  tests.h
task 2 Didenko/: CMakeLists.txt
task 2 Didenko/app/: main.cpp
task 2 Didenko/lib/: DoctorPatientRelation.cpp  DoctorPatientRelation.h  Hospital.cpp  Hospital.h  MedicalWorker.cpp  MedicalWorker.h  Patient.cpp  Patient.h  Person.cpp  RoomAssignment.cpp  RoomAssignment.h  person.h
task 2 Didenko/test/: test.cpp  test.h
